Fixed offcentered Keywords

--- a/frontend/src/components/new-offer/NewOffer.scss
+++ b/frontend/src/components/new-offer/NewOffer.scss
@@ -54,14 +54,19 @@
   
       label {
         margin-right: 8px;
+        height: 100%;
+        display: flex;
+        line-height: normal;
+        align-items: center;
       }
   
       .keywords {
         overflow-x: auto;
         overflow-y: hidden;
         white-space: nowrap;
+        height: 100%;
         display: flex;
-        padding-bottom: 1px;
+        align-items: center;
   
         scrollbar-width: thin;
         scrollbar-color: #AFAFAF #EFEFEF;
@@ -86,8 +91,12 @@
         }
   
         .add-keyword {
-          font-size: 14px;
-          margin-top: 0.2rem;
+          font-size: 0.875rem;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          margin-top: 1px;
+          line-height: normal;
           color: slategray;
         }
   
